backend/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codemare
  labels:
    name: codemare
    environment: production
