backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codemare-backend
  namespace: codemare
  labels:
    app: codemare-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: codemare-backend
